# tauri-inliner-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.changes/: config.json  fix-script-defer.md  initial.md
.github/workflows/: covector-version-or-publish.yml
src/: binary.rs  content-type.json  js_css.rs  lib.rs  script.rs
src/fixtures/: backtick-string.result.html  bad-url.result.html  css-ext.result.html  css-import.result.html  favicon.result.html  get-error.result.html  image-css.result.html  image-data.result.html  image-ext.result.html  image-inline-special-chars.result.html  image-inline.result.html  image-style-attr.result.html  image-url.result.html  script-ie.js  script-local.js
