[package]
name = "tauri-inliner"
version = "0.1.0"
description = "A library to inline HTML assets."
readme = "README.md"
license = "MIT"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
repository = "https://github.com/tauri-apps/tauri-inliner-rs"
homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
keywords = ["tauri", "web", "inline", "html", "assets", "build"]
categories = ["web-programming"]
edition = "2018"
exclude = ["src/fixtures"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
once_cell = "1.5"
regex = "1.4"
base64 = "0.13"
kuchiki = "0.8"
html5ever = "0.25"
url = "2.2"
reqwest = { version = "0.10", features = ["blocking"] }

[dev-dependencies]
tiny_http = "0.7"
