[package]
name = "tauri-inliner"
version = "0.0.0"
description = "A library to inline HTML assets."
readme = "README.md"
license = "MIT"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
repository = "https://github.com/tauri-apps/tauri-inliner-rs"
homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
keywords = ["tauri", "web", "inline", "html", "assets", "build"]
categories = ["web-programming"]
edition = "2018"
exclude = ["src/fixtures"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
once_cell = "1.5"
regex = "1.4"
base64 = "0.13"
kuchiki = "0.8"
html5ever = "0.25"
url = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
derive_more = "0.99"

[dev-dependencies]
tiny_http = "0.7"
percent-encoding = "2.1"
env_logger = "0.8"
difference = "2.0.0"
term = "0.6"
